# auditorydecoding

./: .gitignore  .gitmodules  README.md  causal_splits.ipynb  main.py  pyproject.toml
auditorydecoding/: __init__.py  features.py  plotting.py  preprocessing.py  windowing.py
auditorydecoding/data/: __init__.py  neurosoft_dataset.py  neurosoft_pipeline.py
auditorydecoding/datasets/neurosoft_minipigs_2026/: NeurosoftMinipgs2026.py  pipeline.py
auditorydecoding/experiments/: __init__.py  frequency_decoding_pipeline.py  notebook_linear_pipeline.py
configs/: frequency_decoding_sweep.yaml  frequency_decoding_sweep_all.yaml  frequency_decoding_sweep_filtered.yaml  frequency_decoding_sweep_no_bandpass_decimate.yaml  frequency_decoding_sweep_raw.yaml
datasets/neurosoft_minipigs_2026/: NeurosoftMinipgs2026.py  pipeline.py
notebooks/: academic.mplstyle  causal_splits.ipynb  decimate_results_analysis.ipynb  discover_dataset_stim_freq.ipynb  frequency_decoding.ipynb  linear_training.ipynb  pca_ablation_results.ipynb  raw_data_visualization.ipynb  sweep_results_analysis.ipynb  whitening_exploration.ipynb
pipelines/neurosoft_minipigs_2026/: pipeline.py
pipelines/neurosoft_monkeys_2026/: pipeline.py
scripts/: frequency_decoding_sweep.py  linear_training_sweep.py  pca_component_ablation.py  submit_sweep.sh  submit_sweep_ccdb.sh
