[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auditorydecoding"
version = "0.1.0"
description = "Auditory decoding of brain activity in different animals"
readme = "README.md"
requires-python = ">=3.11, <3.14"

dependencies = [
    "brainsets",
    "matplotlib>=3.10.8",
    "torch-brain",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "temporaldata",
]

[tool.uv.sources]
brainsets = { git = "https://github.com/neuro-galaxy/brainsets", branch = "suarez/mne-bids-utils" }
torch-brain = { git = "https://github.com/neuro-galaxy/torch_brain", branch = "main" }
foundry = { git = "https://github.com/ProjectNFM/Foundry", branch = "auditory-decoding" }
temporaldata = { git = "https://github.com/neuro-galaxy/temporaldata", branch = "main" }

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.4"]
notebooks = ["ipykernel>=7.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["auditorydecoding"]

[tool.ruff]
line-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"
