[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditorydecoding"
version = "0.1.0"
description = "Auditory decoding of brain activity in different animals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brainsets",
    "matplotlib>=3.10.8",
    "torch-brain",
    "temporaldata",
]

[tool.uv.sources]
brainsets = { git = "https://github.com/neuro-galaxy/brainsets", branch = "milo/ajile" }
torch-brain = { git = "https://github.com/neuro-galaxy/torch_brain", branch = "main" }
temporaldata = { git = "https://github.com/neuro-galaxy/temporaldata", branch = "main" }

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.4"]
notebooks = ["ipykernel"]

[tool.ruff]
line-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
include = ["auditorydecoding*"]
